changed header/nav & added new images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,10 +14,12 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'BioRhyme', Arial, sans-serif;
+    font-weight: normal;
+    font-style: normal;
     color: var(--primary);
     background-color: var(--third);
-    line-height: 3;
+    line-height: 2;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,19 +49,19 @@ p {
 
 /* Header */
 header {
-    padding: 10px 6% 10px 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
-    background-color: var(--primary);
+    height: 25px;
+    background: url("https://privacyinternational.org/sites/default/files/flysystem/2018-02/giphy.gif");
 }
 
 header h1 {
-    color: var(--white);
+    color: var(--secondary);
     font-size: 45px;
-    padding-left: 20px;
+    padding: 3px 2% 3px 2%;
 }
 
 /* NAVI Styles */
@@ -67,13 +69,22 @@ nav {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    padding: 3px 1% 3px 1%;
+    line-height: 2;
 }
 
 nav a {
     color: var(--secondary);
-    font-size: 35px;
+    font-size: 25px;
     margin-right: 10px;
     text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 50px;
+    text-decoration: underline;
+    justify-content: space-around;
+    background-color: var(--primary);
+    background-position: center;
 }
 
 /* Hero */
@@ -82,39 +93,70 @@ nav a {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 3px;
-    margin-bottom: 3px;
     color: var(--secondary);
+    line-height: 3;
 }
 
 .hero h2 {
-    opacity: 0.8;
+    opacity: 0.9;
 }
 
 /* Page Wrapper */
+.page-wrapper {
+    padding-top: 3px;
+    background-color: rgb(60,60,60);
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 6;
+}
+
 .page-wrapper img {
-    width: 300px;
+    width: 325px;
+    height: 345px;
     box-shadow: 0 0 5px 4px;
-    margin-top: auto;
-    margin-left: auto;
-    float: right;
+    margin-left: 12px;
+    margin-top: 5px;
+    float: left;
 }
 
 /* about me section */
 
 .about {
-    float: left;
-    box-shadow: 0px 2px;
+    background: url("https://thumbs.gfycat.com/ValuableDisguisedCurlew-size_restricted.gif");
+    float: center;
+    margin-left: 350px;
+    margin-top: 3px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+    border-top: 10px;
+    border-bottom: 10px;
+    border-style: solid;
+    border-color: var(--primary);
 }
 
 .about h2 {
     font-size: 45px;
+    color: var(--white);
+    margin-top: -90px;
     margin-right: 10px;
+    margin-left: 15px;
+    text-decoration: underline;
+    text-align: center;
 }
 
 .about div {
-    font-size: 15px;
-    text-decoration: underline;
+    font-size: 25px;
+    color: var(--white);
+    margin-left: 15px;
+    margin-top: -150px;
+    text-align: center;
 }
 
 /* Project section */
+.projects h2 {
+    text-align: center;
+    font-size: 45px;
+    box-shadow: 5px 5px;
+    line-height: 9;
+    width: auto;
+}
