--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,7 +156,69 @@ nav a {
 .projects h2 {
     text-align: center;
     font-size: 45px;
-    box-shadow: 5px 5px;
-    line-height: 9;
+    line-height: 5;
+    color: var(--white);
     width: auto;
+    border-color: var(--primary);
+    border-radius: 5px;
+    border-style: solid;
+    background: url("https://thumbs.gfycat.com/ValuableDisguisedCurlew-size_restricted.gif");
+}
+
+.projects-container {
+    display: grid;
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(150px, 1fr);
+}
+
+.projects-item {
+    border: 7px solid var(--primary);
+    grid-column: span 4;
+    color: var(--primary);
+    min-height: 50px;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    text-decoration: none;
+    background-blend-mode:hard-light;
+    background-size: 100%;
+    transition: all 0.5s;
+    font-size: 0.8rem;
+}
+
+.projects-item:first-child {
+    grid-column: span 8;
+    grid-row: span 2;
+}
+
+.projects-item div {
+    background-color: var(--primary);
+    padding: 3px 5px;
+    color: var(--white);
+}
+
+.projects-item h3 {
+    font-size: 25px;
+}
+
+/* Project Images */
+.RunBuddy {
+    background-image: url("../images/RUNBUDDY.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.Horiseon {
+    background-image: url("../images/horiseonLogo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.PlaceHolder {
+    background-image: url("../images/placeholer-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
