--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,6 @@ body {
     font-weight: normal;
     font-style: normal;
     color: var(--primary);
-    background-color: var(--third);
     line-height: 2;
 }
 
@@ -112,11 +111,12 @@ nav a {
 
 .page-wrapper img {
     width: 325px;
-    height: 345px;
+    height: 285px;
     box-shadow: 0 0 5px 4px;
     margin-left: 12px;
     margin-top: 5px;
     float: left;
+    border-radius: 5px;
 }
 
 /* about me section */
@@ -151,13 +151,14 @@ nav a {
     margin-left: 15px;
     margin-top: -150px;
     text-align: center;
+    margin-bottom: -60px;
 }
 
 /* Project section */
 .projects h2 {
     text-align: center;
     font-size: 45px;
-    line-height: 5;
+    line-height: 3;
     color: var(--white);
     width: auto;
 }
@@ -229,4 +230,38 @@ nav a {
     grid-row: span 2;
 }
 
-/*
+/* Contact */
+.contact h2 {
+    text-align: center;
+    color: var(--white);
+    font-size: 45px;
+    line-height: 2;
+}
+
+.contact address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
+.contact address a {
+    color: var(--white);
+    padding: 5px;
+    text-decoration: none;
+    font-size: 25px;
+    font-style: normal;
+    display: inline-block;
+    text-shadow: 1px 1px;
+    text-decoration: underline;
+}
+
+.contact address a:hover {
+    color: var(--light);
+    border-style: solid;
+    border-color: var(--primary);
+    border-radius: 5px;
+}
+
+/* end of page styles */
