Updated with recent project

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,6 +212,8 @@ nav a {
     background-image: url("../images/RUNBUDDY.png");
     background-repeat: no-repeat;
     background-size: cover;
+    grid-column: span 4;
+    grid-row: span 2;
 }
 
 .Horiseon {
@@ -222,8 +224,8 @@ nav a {
     grid-row: span 2;
 }
 
-.PlaceHolder {
-    background-image: url("../images/placeholer-image.jpg");
+.travel_buddy {
+    background-image: url("../images/travel_buddy.png");
     background-repeat: no-repeat;
     background-size: cover;
     grid-column: span 4;
